# agent-optimizer-bootstrap

./: .gitignore  README.md  benchmark.py  prepare.py  program.md  pyproject.toml
benchmarks/: manifest.json
benchmarks/bfcl/: README.md  bfcl_simple_000.json  bfcl_simple_001.json  bfcl_simple_002.json  bfcl_simple_003.json  bfcl_simple_004.json  bfcl_simple_005.json  bfcl_simple_006.json  bfcl_simple_007.json  bfcl_simple_008.json  bfcl_simple_009.json  bfcl_simple_010.json  bfcl_simple_011.json  bfcl_simple_012.json  bfcl_simple_013.json  bfcl_simple_014.json  bfcl_simple_015.json  bfcl_simple_016.json  bfcl_simple_017.json  bfcl_simple_018.json  bfcl_simple_019.json  bfcl_simple_020.json  bfcl_simple_021.json  bfcl_simple_022.json  bfcl_simple_023.json  bfcl_simple_024.json  bfcl_simple_025.json  bfcl_simple_026.json  bfcl_simple_027.json  bfcl_simple_028.json  bfcl_simple_029.json  bfcl_simple_030.json  bfcl_simple_031.json  bfcl_simple_032.json  bfcl_simple_033.json  bfcl_simple_034.json  bfcl_simple_035.json  bfcl_simple_036.json  bfcl_simple_037.json  bfcl_simple_038.json  (+41 more)
benchmarks/docs/: invoice_contact_01.json  invoice_contact_02.json  invoice_contact_03.json  invoice_contact_04.json  invoice_contact_05.json  invoice_contact_06.json  invoice_contact_07.json  invoice_contact_08.json  invoice_contact_09.json  invoice_contact_10.json  refund_window_01.json  refund_window_02.json  (+18 more)
inner_agent/: __init__.py  agent.py  config.py  memory.py  prompt.md  provider.py  retrieval.py  tools.py
scripts/: import_bfcl_samples.py
tests/: test_inner_agent.py
(+67 files in other folders)
